fixed overflow

--- a/index.css
+++ b/index.css
@@ -3,6 +3,8 @@ html, body{
     margin: 0;
     height: 100%;
     width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 * {
